<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_Path" Id="{7a32403f-76ad-498e-a32b-cbb57e028ee1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bPathRunning  : BOOL;
	bPathFinnish : BOOL;
	bStartPath : BOOL;
	tTime : LREAL;
	bPathActivated : BOOL; // HMI path or Joistick
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>